--- a/Assignment1/.project
+++ b/Assignment1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Asm1-Net1</name>
+	<name>MinMin</name>
 	<comment></comment>
 	<projects>
 	</projects>
